[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/module_widget.gd" id="1_script"]

[node name="ModuleWidget" type="PanelContainer"]
custom_minimum_size = Vector2(200, 220)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Module Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 11
text = "Stats..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResearchLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.352941, 0.352941, 1)
theme_override_font_sizes/font_size = 10
text = "Research Required: ..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "Costs"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="OwnedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 10
text = "In Storage: 0"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Craft"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
